# education-design-patterns-with-cpp

./: .gitignore  README.md
code/: 01_derived.cpp  02_derived_cast.cpp  03_derived_exception.cpp  04_derived_multy.cpp  05_derived_cross_cast.cpp  100_benchmark_malloc_and_new.cpp  101_string_buffer_optimisation.cpp  110_scoped_guard.cpp  111_const_reference_lifetime.cpp  112_const_reference_lifetime.cpp  113_sfinae_is_empty_vargs_c++20.cpp  114_scoped_guard_c++17.cpp  115_scoped_guard_exceptions.cpp  116_scoped_guard_type_erase.cpp  120_friend_ostream.cpp  121_friend_factory_template.cpp  122_friend_factory_crtp.cpp  130_object_construction_order.cpp  131_object_factory.cpp  132_object_factory_w_spec.cpp  133_object_factory_w_register.cpp  134_object_factory_w_register.cpp  135_object_factory_w_clone_base.cpp  136_object_factory_w_clone_if.cpp  140_template_method_derived.cpp  141_preamble_postscript.cpp  142_non_virtual_interface.cpp  143_send_data.cpp  150_singletone_logger_static.cpp  151_singletone_logger_mayers.cpp  152_singletone_logger.cpp  152_singletone_logger_pimpl.cpp  152_singletone_logger_pimpl.hpp  153_singletone_logger_leakning.cpp  160_policy_smart_ptr_composite_policy.cpp  161_policy_smart_ptr_inherited_policy.cpp  162_policy_smart_ptr_release_policy.cpp  163_policy_smart_ptr_static_policy.cpp  164_policy_smart_ptr_adapter.cpp  165_policy_smart_ptr_sfinae.cpp  (+70 more)
code/lib/common/: common.cpp  common.h
